WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234771
[LFC][IFC] Incorrect word-spacing gaps between RTL runs
https://bugs.webkit.org/show_bug.cgi?id=234771
Summary
[LFC][IFC] Incorrect word-spacing gaps between RTL runs
alan
Reported
2021-12-31 14:11:35 PST
ssia
Attachments
Patch
(9.80 KB, patch)
2021-12-31 14:25 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-12-31 14:25:52 PST
Created
attachment 448134
[details]
Patch
Antti Koivisto
Comment 2
2022-01-01 01:37:56 PST
Comment on
attachment 448134
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=448134&action=review
> Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayBox.h:81 > - bool isText() const { return m_type == Type::Text; } > + bool isText() const { return m_type == Type::Text || isWordSeparator(); } > + bool isWordSeparator() const { return m_type == Type::WordSeparator; }
Why do we need display boxes for these? What should we do with them during painting/hit testing?
Antti Koivisto
Comment 3
2022-01-01 01:38:55 PST
Oh I see, isText() still return true so they get treated as text boxes.
EWS
Comment 4
2022-01-01 06:56:50 PST
Committed
r287500
(
245635@main
): <
https://commits.webkit.org/245635@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 448134
[details]
.
Radar WebKit Bug Importer
Comment 5
2022-01-01 06:57:23 PST
<
rdar://problem/87040223
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug