[LFC][IFC] Incorrect word-spacing gaps between RTL runs https://bugs.webkit.org/show_bug.cgi?id=234771

Reviewed by Antti Koivisto.

Source/WebCore:

"word-spacing" acts as a margin for word separator type of runs.
In this patch we take this margin into account the same way we do for atomic inline level boxes with margins.

Test: fast/text/word-spacing-rtl.html

* layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::Run::Run):
* layout/formattingContexts/inline/InlineLine.h:
(WebCore::Layout::Line::Run::isText const):
(WebCore::Layout::Line::Run::isWordSeparator const):
* layout/formattingContexts/inline/display/InlineDisplayBox.h:
(WebCore::InlineDisplay::Box::isText const):
(WebCore::InlineDisplay::Box::isWordSeparator const):
(WebCore::InlineDisplay::Box::isNonRootInlineLevelBox const):
(WebCore::InlineDisplay::Box::type const): Deleted.
* layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::appendTextDisplayBox):
(WebCore::Layout::InlineDisplayContentBuilder::adjustVisualGeometryForDisplayBox):
(WebCore::Layout::InlineDisplayContentBuilder::processBidiContent):

LayoutTests:

* fast/text/word-spacing-rtl-expected.html: Added.
* fast/text/word-spacing-rtl.html: Added.



Canonical link: https://commits.webkit.org/245635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287500 268f45cc-cd09-0410-ab3c-d52691b4dbfc